--- a/public/css/home.css
+++ b/public/css/home.css
@@ -109,6 +109,8 @@
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 400px;
+    margin: 10px auto;
+    margin-left: 4px;
   }
   
   .welcome-section h3 {
@@ -160,6 +162,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 1200px;
     margin: 10px auto;
+    margin-left: 4px;
   }
   
   .quiz-categories h3 {
@@ -218,6 +221,8 @@
     margin: 10px auto;
     font-family: 'Poppins', sans-serif;
     overflow: hidden;
+    margin-left: 4px;
+
   }
   
   .tit {
